--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
+    "moment": "^2.27.0",
+    "mongoose": "^5.10.0",
     "morgan": "~1.9.1",
     "pug": "^3.0.0"
   }
