--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.10.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "pug": "^3.0.0"
   }
 }
