--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "clean-css": "^4.2.3",
     "constantinople": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
+    "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.10.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "pug": "^3.0.0"
   }
 }
