--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "clean-css": "^4.2.3",
+    "connect-mongo": "^3.2.0",
     "constantinople": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
