--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^3.2.0",
     "constantinople": "^4.0.1",
     "cookie-parser": "~1.4.4",
+    "dayjs": "^1.9.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
@@ -21,7 +22,6 @@
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
     "method-override": "^3.0.0",
-    "moment": "^2.27.0",
     "mongoose": "^5.10.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
