--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
