--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
+    "lightbox2": "^2.11.3",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.0",
     "morgan": "~1.9.1",
