--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.797.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "clean-css": "^4.2.3",
@@ -15,6 +16,7 @@
     "cookie-parser": "~1.4.4",
     "dayjs": "^1.9.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.5",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
