--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "multer-s3": "^2.9.0",
     "pug": "^3.0.0"
   }
 }
