--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
+    "express-mongo-sanitize": "^2.0.2",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
@@ -27,11 +28,11 @@
     "jstransformer": "^1.0.0",
     "lightbox2": "^2.11.3",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.0",
+    "mongoose": "^5.12.7",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "multer-s3": "^2.9.0",
-    "pug": "^3.0.0"
+    "pug": "^3.0.2"
   }
 }
