--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
     "lightbox2": "^2.11.3",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.7",
     "morgan": "~1.9.1",
