--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
+    "is-svg": "^4.3.1",
     "jade": "~1.11.0",
     "jstransformer": "^1.0.0",
     "lightbox2": "^2.11.3",
