--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.5",
     "express": "~4.16.1",
     "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
