--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "^3.2.0",
     "constantinople": "^4.0.1",
     "cookie-parser": "~1.4.4",
+    "csurf": "^1.11.0",
     "dayjs": "^1.9.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
